--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_API_URL=https://salome-adopte-un-compagnon-back.simploncertif.fr/api/
+# NEXT_PUBLIC_API_URL=https://salome-adopte-un-compagnon-back.simploncertif.fr/api/
+NEXT_PUBLIC_API_URL=https://127.0.0.1:8000/api
