--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "html-entities": "^2.5.2",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
